docs/7.52/md/abapselect_itab.md
---
title: "Syntax"
description: |
  ... @itab Effect Specifies an internal table(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_table_glosry.htm 'Glossary Entry') itab, whose name must be prefixed with the @ character, as a data source(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_d
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_itab.htm"
abapFile: "abapselect_itab.htm"
keywords: ["select", "loop", "do", "if", "case", "try", "method", "class", "data", "types", "internal-table", "field-symbol", "abapselect", "itab"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) →  [Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopensql.htm) →  [Open SQL - Reads](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopen_sql_reading.htm) →  [SELECT clauses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_clauses.htm) →  [SELECT - FROM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfrom_clause.htm) →  [SELECT - data\_source](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_data_source.htm) → 

SELECT - FROM @itab

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_shortref.htm)

Syntax

... @itab

Effect

Specifies an [internal table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_table_glosry.htm "Glossary Entry") itab, whose name must be prefixed with the @ character, as a [data source](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_data_source.htm) of a [query](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenquery_glosry.htm "Glossary Entry"). The SELECT statement handles the internal table of the application server like a database table on the database. The ABAP types of the columns in the internal table are mapped to suitable [built-in data types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm) in ABAP Dictionary. If a column is declared with reference to a type in ABAP Dictionary, this type is used directly.

There are two different cases here:

-   The data in the internal table is not required on the database.
    

In this case, the data of the internal table is accessed on the application server and the table is handled like a table in the [table buffer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_buffer_glosry.htm "Glossary Entry"). This is possible for all database platforms.

-   The data in the internal table is required on the database.
    

In this case, the data must be passed to temporary tables in the database before the query is actually executed. This option is not supported by all databases. If it is known statically that the data is required on the database, a syntax check warning occurs that can be hidden by the pragma ##db\_feature\_mode\[itabs\_in\_from\_clause\]. If an attempt is made to pass data from the internal table to a database at runtime and the database does not support this, a handleable exception of the class CX\_SY\_SQL\_UNSUPPORTED\_FEATURE is raised.

The data in the internal table must not be passed to the database (or the statement can be executed on the application server) in precisely those cases where the SELECT statement meets the same [conditions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuffer_restrictions.htm) as when the [table buffer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_buffer_glosry.htm "Glossary Entry") is accessed in [table buffering](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_buffering_glosry.htm "Glossary Entry").

The ABAP types of the columns in the internal table are mapped to types in ABAP Dictionary. If a column is declared with reference to a type in ABAP Dictionary, this type is used directly.

The following conditions apply:

-   Only one internal table can be specified in an Open SQL statement.
    
-   An alternative table name must be assigned to the internal table using [AS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfrom_clause.htm).
    
-   The row type of the internal table can be elementary or structured.
    

-   An elementary row type represents a column that can be addressed in the other [clauses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselect_clauses.htm) of the query using the name table\_line or an alternative column name defined in the [SELECT list](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_list.htm) after AS.

-   A structured row type cannot contain any substructures.

-   No deep row types are allowed. An elementary row type cannot be a string or a reference type and a structured row type cannot contain any strings, reference types, or internal tables as components, with the following exception: An elementary row type or a component with the type [string](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuiltin_types_character.htm) is allowed if this is declared using a reference to the built-in dictionary type [SSTRING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm).
    
-   If the addition [ORDER BY PRIMARY KEY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaporderby_clause.htm) is used, the internal table must have a [primary table key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprimary_table_key_glosry.htm "Glossary Entry").
    
-   The key fields of a [primary table key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprimary_table_key_glosry.htm "Glossary Entry") in the internal table must be contiguous columns that appear in the same order at the start of the row type.
    
-   If the [FROM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapfrom_clause.htm) clause is specified statically, the internal table cannot be a generically typed formal parameter or a generically typed field symbol. Objects like this can only be specified in a dynamic FROM clause and must represent a matching internal table at runtime.
    
-   The internal table cannot contain any columns declared with reference to the obsolete dictionary types [DF16\_SCL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm) and [DF34\_SCL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm).
    
-   The internal table should have an explicitly defined primary key (which can be empty). Generic primary keys and [standard keys](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstandard_key_glosry.htm "Glossary Entry") are not evaluated when read and a syntax check warning occurs.
    

The data in the internal table is handled like data on the database even if it is not transported to the database. In particular, data with the type [string](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuiltin_types_character.htm) declared using a reference to the built-in dictionary type [SSTRING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm) is handled like text fields with fixed lengths in which trailing blanks are ignored.

The internal table itab is always regarded as a cross-client table. The data type of the first column is never regarded as a client column, regardless of its data type.

Notes

-   The data in internal tables should only be transported to the database system if it is actually needed there.
    
-   The use of an internal table as a data source of SELECT is mainly applicable to joins with data sources from the database. In this case, the data of the internal table is transported to the database.
    
-   An internal table as a data source of SELECT is also, however, a potential alternative to the statements [READ TABLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_table.htm) and [LOOP AT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_itab.htm) and hence makes Open SQL syntax possible that cannot otherwise be used. If this solution is used, it should be ensured that the data is evaluated on the application server and that no data is transported to the database system to be evaluated.
    
-   The fact that, when accessed on the application server without data transport, the data in the internal table is handled like a table in the table buffer does not mean that the data is actually stored here. The appropriate restrictions do, however, apply to the SELECT statement.
    
-   In an ABAP program, it is possible to use the method USE\_FEATURES of the class [CL\_ABAP\_DBFEATURES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_dbfeatures.htm) to check whether the current database system or a database system accessed using a [secondary connection](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensecondary_db_connection_glosry.htm "Glossary Entry") supports access to internal tables. This requires the constant ITABS\_IN\_FROM\_CLAUSE of this class to be passed to the method in an internal table.
    
-   Access to an internal table as a data source of SELECT should not be seen as an alternative to the statements [READ TABLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapread_table.htm) and [LOOP AT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaploop_at_itab.htm). More specifically, data should only be transported to the database when it is actually needed there.
    
-   In internal tables with elementary row types, the name of the [pseudo component](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpseudo_component_glosry.htm "Glossary Entry") table\_line cannot be the name of a structure in ABAP. An inline declaration can only be made in the [INTO](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinto_clause.htm) clause if the column table\_line of the results set is assigned an alternative column name using [AS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_list.htm).
    
-   When an internal table with elementary row type is accessed in a [common table expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencommon_table_expression_glosry.htm "Glossary Entry") after [WITH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwith.htm), the [SELECT list](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect_list.htm) cannot be \* or contain data\_source~\*.
    
-   If an internal table is used as a data source, the syntax check is performed in [strict mode from Release 7.52](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopensql_strict_mode_752.htm).
    

Example

Uses a table of random numbers as a data source of a [SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect.htm) statement. The data is transported to the database for sorting and the statement can only be executed in database systems where sorting is supported.

TYPES:
  BEGIN OF line,
    id     TYPE c LENGTH 1,
    number TYPE i,
  END OF line.
DATA itab TYPE HASHED TABLE OF line
          WITH UNIQUE KEY id.
IF NOT cl\_abap\_dbfeatures=>use\_features(
         EXPORTING
           requested\_features =
             VALUE #( ( cl\_abap\_dbfeatures=>itabs\_in\_from\_clause ) ) ).
  cl\_demo\_output=>display(
    \`System does not support internal tables as data source\` ).
  RETURN.
ENDIF.
DATA(rnd) = cl\_abap\_random\_int=>create(
  seed = CONV i( sy-uzeit ) min = 1 max = 100 ).
itab =  VALUE #(
  FOR i = 1 UNTIL i > 25
  ( id = substring( val = sy-abcde off = i len = 1 )
    number = rnd->get\_next( ) ) ).
SELECT \*
       FROM @itab AS numbers
       WHERE number > 50
       ORDER BY id
       INTO TABLE @DATA(result)
       ##db\_feature\_mode\[itabs\_in\_from\_clause\].
cl\_demo\_output=>display( result ).

Example

Uses an internal table as the data source of an inner join of a [SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect.htm) statement. The data is transported to the database for the join and the statement can only be executed in database systems where joins are supported.

DATA itab TYPE HASHED TABLE OF scarr
          WITH UNIQUE KEY mandt carrid.
IF NOT cl\_abap\_dbfeatures=>use\_features(
         EXPORTING
           requested\_features =
             VALUE #( ( cl\_abap\_dbfeatures=>itabs\_in\_from\_clause ) ) ).
  cl\_demo\_output=>display(
    \`System does not support internal tables as data source\` ).
  RETURN.
ENDIF.
itab =  VALUE #( ( carrid = 'LH' carrname = 'L.H.' )
                 ( carrid = 'UA' carrname = 'U.A.' ) ).
SELECT scarr~carrid, scarr~carrname, spfli~connid
       FROM @itab AS scarr
         INNER JOIN spfli ON scarr~carrid = spfli~carrid
       INTO TABLE @DATA(result)
       ##db\_feature\_mode\[itabs\_in\_from\_clause\].
cl\_demo\_output=>display( result ).

Example

Uses a table with an elementary data type as the data source of two [SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect.htm) statements. The data is not needed on the database and the SELECT statements meet the requirements for [table buffering](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_puffering.htm). This means that the statements can be executed on all database systems. In the second SELECT statement, a syntax error would occur without the alternative column name number, since the inline declaration after INTO cannot create an internal table with the column name table\_line. If the statements were modified in a such a way that they no longer met the requirements for table buffering (for example by adding the addition DISTINCT), it would not be possible to execute them on all database systems.

DATA itab TYPE SORTED TABLE OF i WITH UNIQUE KEY table\_line.
itab =  VALUE #( ( 1 )
                 ( 2 )
                 ( 3 ) ).
DATA result1 LIKE itab.
SELECT table\_line
       FROM @itab AS numbers
       INTO TABLE @result1.
cl\_demo\_output=>write( result1 ).
SELECT table\_line AS number
       FROM @itab AS numbers
       INTO TABLE @DATA(result2).
cl\_demo\_output=>display( result2 ).